# marine_event_slam

./: .gitignore  .nojekyll  INTEGRATION.html  INTEGRATION.md  README.md  _quarto.yaml  event_vision.py  index.html  index.qmd  marine_event_detector.py  pyproject.toml  rgb_slam.html  robots.txt  search.json  sitemap.xml  stabilizer.py
pose_estimation/: __init__.py  demo_frames.py  runme.py  utils.py
pose_estimation/blind_pose_estimation/: imu_pose_estimation.py
pose_estimation/event_pose_estimation/: event_pose_estimation.py
pose_estimation/imu/: transform.py
pose_estimation/rgb_pose_estimation/: rgb_pose_estimation.py
presentation/: README.md  features.html  features.qmd  lens_camera.html  lens_camera.py  lens_camera.qmd  pexels-29831317.info
