[tool.poetry]
name = "marine-event-slam"
version = "0.1.0"
description = "Marine event camera SLAM with CV-based obstacle avoidance"
authors = []
packages = [{ include = "pose_estimation" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy  = "^2.0"
opencv-python = "^4.10"

# Only for ORB
#scipy  = "^1.13"

# Only for offline testing
pandas = "*"

# Only for making debug outputs
#matplotlib    = "^3.9"
#geodatasets = "^2026.5.1"
#geopandas = "^1.1.3"
#contextily = "^1.7.0"

[tool.poetry.scripts]
pose_estimation = "pose_estimation.runme:main"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
